Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-33951

bad text rendering on Android 4.1 - 4.2 with Mali400 GPU

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.2.0, 5.3.0 Beta1, 5.3.1
    • 5.2.0 Alpha
    • GUI: Text handling
    • None
    • Galaxy Note with CyanogenMod 10.1.3-n7000
    • Android
    • 4f63f43cf2da59c2e87ae96e8bd84950490a070b, b3f201b8afcf88015f5bff7b3f43e90b13f8a8f1, f65333b027463ea40e0cd4603e48fca62d60216a

    Description

      This looks different than https://bugreports.qt-project.org/browse/QTBUG-32861 and anyway it's a current problem with Qt from the latest stable branch. Can reproduce it on my Galaxy Note with CyanogenMod 10.1.3-n7000 (Android 4.2.2) but not on the Nexus 7 with Android 4.3, with most but not all fonts. See screenshot from qtdeclarative/examples/quick/text.

      Attachments

        1. screen.png
          screen.png
          102 kB
        2. Foto 1.JPG
          Foto 1.JPG
          484 kB
        3. QTBUG-33951-again.png
          QTBUG-33951-again.png
          190 kB
        4. zte-blade-2.3beta.png
          zte-blade-2.3beta.png
          221 kB
        5. Screenshot_2014-05-31-03-42-01.png
          Screenshot_2014-05-31-03-42-01.png
          25 kB
        6. 0001-Android-enable-FBO-readback-workaround-for-HuaWei.patch
          1 kB
        For Gerrit Dashboard: QTBUG-33951
        # Subject Branch Project Status CR V

        Activity

          People

            ylopes Yoann Lopes
            srutledg Shawn Rutledge
            Votes:
            3 Vote for this issue
            Watchers:
            13 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes