Workaround for glyph upload bug with the Mali-400 GPU.

Uploading unaligned and alpha-only data seems to be broken with that
GPU, uploading line by line does the trick.

Task-number: QTBUG-33951
Change-Id: I2790990ca1d3a3016ec3d9fefaea7002b92faeb7
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>