src/quick/scenegraph/qsgdefaultdistancefieldglyphcache.cpp
@@ -167,7 +167,7 @@ void QSGDefaultDistanceFieldGlyphCache::storeGlyphs(const QList<QDistanceField> 
         if (glyph.width() != expectedWidth)
             glyph = glyph.copy(0, 0, expectedWidth, glyph.height());
 
-        if (useWorkaround()) {
+        if (useTextureResizeWorkaround()) {
             uchar *inBits = glyph.scanLine(0);
             uchar *outBits = texInfo->image.scanLine(int(c.y)) + int(c.x);
             for (int y = 0; y < glyph.height(); ++y) {
@@ -177,7 +177,19 @@ void QSGDefaultDistanceFieldGlyphCache::storeGlyphs(const QList<QDistanceField> 
             }
         }
 
-        glTexSubImage2D(GL_TEXTURE_2D, 0, c.x, c.y, glyph.width(), glyph.height(), GL_ALPHA, GL_UNSIGNED_BYTE, glyph.constBits());
+        if (useTextureUploadWorkaround()) {
+            for (int i = 0; i < glyph.height(); ++i) {
+                glTexSubImage2D(GL_TEXTURE_2D, 0,
+                                c.x, c.y + i, glyph.width(),1,
+                                GL_ALPHA, GL_UNSIGNED_BYTE,
+                                glyph.scanLine(i));
+            }
+        } else {
+            glTexSubImage2D(GL_TEXTURE_2D, 0,
+                            c.x, c.y, glyph.width(), glyph.height(),
+                            GL_ALPHA, GL_UNSIGNED_BYTE,
+                            glyph.constBits());
+        }
     }
 
     // restore to previous alignment
@@ -204,7 +216,7 @@ void QSGDefaultDistanceFieldGlyphCache::releaseGlyphs(const QSet<glyph_t> &glyph
 
 void QSGDefaultDistanceFieldGlyphCache::createTexture(TextureInfo *texInfo, int width, int height)
 {
-    if (useWorkaround() && texInfo->image.isNull())
+    if (useTextureResizeWorkaround() && texInfo->image.isNull())
         texInfo->image = QDistanceField(width, height);
 
     while (glGetError() != GL_NO_ERROR) { }
@@ -255,12 +267,24 @@ void QSGDefaultDistanceFieldGlyphCache::resizeTexture(TextureInfo *texInfo, int 
 
     updateTexture(oldTexture, texInfo->texture, texInfo->size);
 
-    if (useWorkaround()) {
+    if (useTextureResizeWorkaround()) {
         GLint alignment = 4; // default value
         glGetIntegerv(GL_UNPACK_ALIGNMENT, &alignment);
         glPixelStorei(GL_UNPACK_ALIGNMENT, 1);
 
-        glTexSubImage2D(GL_TEXTURE_2D, 0, 0, 0, oldWidth, oldHeight, GL_ALPHA, GL_UNSIGNED_BYTE, texInfo->image.constBits());
+        if (useTextureUploadWorkaround()) {
+            for (int i = 0; i < texInfo->image.height(); ++i) {
+                glTexSubImage2D(GL_TEXTURE_2D, 0,
+                                0, i, oldWidth, 1,
+                                GL_ALPHA, GL_UNSIGNED_BYTE,
+                                texInfo->image.scanLine(i));
+            }
+        } else {
+            glTexSubImage2D(GL_TEXTURE_2D, 0,
+                            0, 0, oldWidth, oldHeight,
+                            GL_ALPHA, GL_UNSIGNED_BYTE,
+                            texInfo->image.constBits());
+        }
 
         glPixelStorei(GL_UNPACK_ALIGNMENT, alignment); // restore to previous value
 
@@ -334,7 +358,12 @@ void QSGDefaultDistanceFieldGlyphCache::resizeTexture(TextureInfo *texInfo, int 
 
     glBindTexture(GL_TEXTURE_2D, texInfo->texture);
 
-    glCopyTexSubImage2D(GL_TEXTURE_2D, 0, 0, 0, 0, 0, oldWidth, oldHeight);
+    if (useTextureUploadWorkaround()) {
+        for (int i = 0; i < oldHeight; ++i)
+            glCopyTexSubImage2D(GL_TEXTURE_2D, 0, 0, i, 0, i, oldWidth, 1);
+    } else {
+        glCopyTexSubImage2D(GL_TEXTURE_2D, 0, 0, 0, 0, 0, oldWidth, oldHeight);
+    }
 
     ctx->functions()->glFramebufferRenderbuffer(GL_FRAMEBUFFER, GL_COLOR_ATTACHMENT0,
                                                 GL_RENDERBUFFER, 0);
@@ -359,7 +388,7 @@ void QSGDefaultDistanceFieldGlyphCache::resizeTexture(TextureInfo *texInfo, int 
     m_blitProgram->disableAttributeArray(int(QT_TEXTURE_COORDS_ATTR));
 }
 
-bool QSGDefaultDistanceFieldGlyphCache::useWorkaround() const
+bool QSGDefaultDistanceFieldGlyphCache::useTextureResizeWorkaround() const
 {
     static bool set = false;
     static bool useWorkaround = false;
@@ -367,6 +396,18 @@ bool QSGDefaultDistanceFieldGlyphCache::useWorkaround() const
         QOpenGLContextPrivate *ctx_p = static_cast<QOpenGLContextPrivate *>(QOpenGLContextPrivate::get(QOpenGLContext::currentContext()));
         useWorkaround = ctx_p->workaround_brokenFBOReadBack
                 || qmlUseGlyphCacheWorkaround(); // on some hardware the workaround is faster (see QTBUG-29264)
+        set = true;
+    }
+    return useWorkaround;
+}
+
+bool QSGDefaultDistanceFieldGlyphCache::useTextureUploadWorkaround() const
+{
+    static bool set = false;
+    static bool useWorkaround = false;
+    if (!set) {
+        useWorkaround = qstrcmp(reinterpret_cast<const char*>(glGetString(GL_RENDERER)),
+                                "Mali-400 MP") == 0;
         set = true;
     }
     return useWorkaround;
